--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ class: center, middle
 
 * named vs. unnamed
 * global vs. local
-* single static assignment form (SSA)
+* static single assignment form (SSA)
 
 
     ; local variable
