--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@ class: center, middle
 
 # Introduction
 
-* TODO add some gernal information
 * Low Level Virtual Machine
 * compiler infrastructure written in C++
 * goal: compile-time, link-time, run-time optimization of programms written in any language
@@ -40,10 +39,10 @@ class: center, middle
 
 ---
 
-# Basic types
+# Single value types
 
 * typed language with lots of types
-* basic types #TODO find the right name
+* single value types
   * integer, floats, pointers
 
 ## integer type
@@ -52,14 +51,13 @@ class: center, middle
     i64
     i1 ; bool
     i1337
+    float
 
 ---
 
-# Aggregated types
+# Aggregate types
 
-* aggregated types #TODO check name
-  * arrays, structs
-  * void
+* arrays, structs
 
 ## array
 
@@ -83,7 +81,9 @@ class: center, middle
 
 * add, mull, xor, ...
 
+
     ; insert example here
+
 
 ---
 
@@ -93,10 +93,12 @@ class: center, middle
 * global vs. local
 * static single assignment form (SSA)
 
+
     ; local variable
     %im_local =
     ; global variable
     @im_global = 
+
 
 ---
 
@@ -105,6 +107,14 @@ class: center, middle
 * load and Store
 * alloca
 * getelementptr
+
+## alloca, load, store
+
+
+## getelementptr example
+
+
+    %str_ptr = getelementptr [12 x i8]* @str, i64 0, i64 0
 
 ---
 
@@ -131,6 +141,7 @@ class: center, middle
 
 * list of basic blocks
 
+
     ; simple function that returns zero
     define i32 @main() {
     entry:
@@ -145,7 +156,7 @@ class: center, middle
 
     declare i32 @printf(i8*, ...)
 
-----
+---
 
 # Function call
 
@@ -154,6 +165,7 @@ class: center, middle
     %result = call i64(i64)* @fib(i64 23)
     ; call to external printf
     call i32(i8*, ...)* @printf(i8* %str_ptr, i64 23, i64 %result)
+
 
 ---
 
