add void, label types

--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@ class: center, middle
 
 ---
 
+# Other types
+
+* void
+* label
+
+---
+
 # Instructions
 
 ## Binary Instructions
@@ -83,7 +90,7 @@ class: center, middle
 
 
     ; insert example here
-
+    %a = add i32 %0, 23
 
 ---
 
