add examples for mul, add

--- a/index.html
+++ b/index.html
@@ -86,11 +86,12 @@ class: center, middle
 
 ## Binary Instructions
 
-* add, mull, xor, ...
-
+* add, mul, xor, ...
+* fadd, fmul, ... for floating point numbers
 
     ; insert example here
     %a = add i32 %0, 23
+    %b = fmul float 4.2, %2
 
 ---
 
