add slide about branch instruction

--- a/index.html
+++ b/index.html
@@ -147,6 +147,13 @@ class: center, middle
 
 ---
 
+# br instruction
+
+    br i1 %cond, label %label, label %oter_label
+    br label %label          ; Unconditional branch
+
+---
+
 # Functions
 
 ## Function definition
